--- a/lighttpd/www/merciless.seperation.xyz/index.html
+++ b/lighttpd/www/merciless.seperation.xyz/index.html
@@ -1,12 +1,45 @@
-<html>
-<head><title>Merciless Seperation - Utrecht</title>
+<!doctype html>
+
+<html class="">
+
+
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="boilerplate.css" rel="stylesheet" type="text/css">
+<link href="portfolioResponsive.css" rel="stylesheet" type="text/css">
+<link href="portfolioStyle.css" rel="stylesheet" type="text/css">
+
+
 </head>
-<body>
-<h1>It Works</h1>
-This is a dummy page for landing page.
-<br>Testing filters:
-<br>Brexit
-<br>She
-<br>he
+
+<body bgcolor="#000000">
+
+ 
+  <article class="fluid gallery">
+    <figure class="fluid tiles zeroMargin_desktop zeroMargin_tablet"> <a href="http://seperation.xyz/wikipedia"><img src="wikipedia.png" alt="placeholder"/></a>
+      <figcaption class="textStyle"></figcaption>
+    </figure>
+    <figure class="fluid tiles"> <a href="http://seperation.xyz/search"><img src="search.png" alt="placeholder"/></a>
+      <figcaption class="textStyle"></figcaption>
+    </figure>
+    <figure class="fluid tiles  zeroMargin_tablet hide_mobile"> <a href="http://nu.nl"> <img src="nu.png" alt="placeholder"/> </a>
+      <figcaption class="textStyle"></figcaption>
+    </figure>
+    <figure class="fluid tiles zeroMargin_desktop  hide_mobile"> <a href="http://bbc.com"><img src="bbc.png" alt="placeholder"/></a>
+      <figcaption class="textStyle"></figcaption>
+    </figure>
+    <figure class="fluid tiles zeroMargin_tablet hide_mobile"> <a href="http://www.aljazeera.com/"> <img src="aljazeera.png" alt="placeholder"/> </a>
+   
+      <figcaption class="textStyle"></figcaption>
+    </figure>
+    <figure class="fluid tiles hide_mobile"> <a href="http://www.geenstijl.nl/"><img src="geenstijl.png" alt="placeholder"/> </a>
+      <figcaption class="textStyle"></figcaption>
+    </figure>
+    
+  </article>
+ 
+</div>
+
 </body>
 </html>
