landing page: make responsive

--- a/lighttpd/www/merciless.seperation.xyz/index.html
+++ b/lighttpd/www/merciless.seperation.xyz/index.html
@@ -1,8 +1,11 @@
 <!doctype html>
-
+<!--[if lt IE 7]> <html class="ie6 oldie"> <![endif]-->
+<!--[if IE 7]>    <html class="ie7 oldie"> <![endif]-->
+<!--[if IE 8]>    <html class="ie8 oldie"> <![endif]-->
+<!--[if gt IE 8]><!-->
 <html class="">
 
-
+<!--<![endif]-->
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +16,7 @@
 
 </head>
 
-<body bgcolor="#000000">
+<body>
 
  
   <article class="fluid gallery">
@@ -30,13 +33,12 @@
       <figcaption class="textStyle"></figcaption>
     </figure>
     <figure class="fluid tiles zeroMargin_tablet hide_mobile"> <a href="http://www.aljazeera.com/"> <img src="aljazeera.png" alt="placeholder"/> </a>
-   
+    
       <figcaption class="textStyle"></figcaption>
     </figure>
     <figure class="fluid tiles hide_mobile"> <a href="http://www.geenstijl.nl/"><img src="geenstijl.png" alt="placeholder"/> </a>
       <figcaption class="textStyle"></figcaption>
     </figure>
-    
   </article>
  
 </div>
