landing page: use IP over domain names

--- a/lighttpd/www/merciless.seperation.xyz/index.html
+++ b/lighttpd/www/merciless.seperation.xyz/index.html
@@ -33,10 +33,10 @@
     <figure class="fluid tiles hide_mobile"> <a href="http://www.geenstijl.nl/"><img src="geenstijl.png" alt="placeholder"/> </a>
       <figcaption class="textStyle"></figcaption>
     </figure>
-    <figure class="fluid tiles zeroMargin_desktop zeroMargin_tablet"> <a href="http://seperation.xyz/wikipedia"><img src="wikipedia.png" alt="placeholder"/></a>
+    <figure class="fluid tiles zeroMargin_desktop zeroMargin_tablet"> <a href="http://97.107.140.173"><img src="wikipedia.png" alt="placeholder"/></a>
       <figcaption class="textStyle"></figcaption>
     </figure>
-    <figure class="fluid tiles"> <a href="http://seperation.xyz/search"><img src="search.png" alt="placeholder"/></a>
+    <figure class="fluid tiles"> <a href="http://45.79.148.194"><img src="search.png" alt="placeholder"/></a>
       <figcaption class="textStyle"></figcaption>
     </figure>
   </article>
